src/css/style.css
.bg-drk {
    background-color: #1D1818;
    border-radius: 10px;
    height: 80px;
    margin-top: 1%;
}

.navbar-brand {
    font-size: 40px;
}

.bg-gry {
    background-color: #D9D9D9;
    height: 20px;
    border-radius: 20px;
}

.search-form-wrapper {
    margin-left: auto;
}

.search-form-wrapper button i {
    color: white;
    font-size: 20px;
}

.navbar-icon-wrapper li {
    padding: 7.5px;
}

.navbar-icon-wrapper li a {
    background-color: #1D1818;
    color: white;
}

.navbar .navbar-icon-wrapper {
    font-size: 25px;
    margin-left: auto;
    margin-right: initial !important;
}

.bottom-navbar-wrapper {
    margin: 0 auto;
}



/* section home  */

.btn-cart {
    padding: 0.7rem 1.2rem;
    background: black;
    color: whitesmoke;
    font-weight: 500;
    display: inline-block;
    text-transform: uppercase;
    border-radius: 10px;
    margin-left: 16%;

}

.btn-cart:hover {
    margin-left: 6%;
    background: grey;
    letter-spacing: 2px;
    transition: 0.2s;
    text-decoration: none;
    color: black;
}

.home {
    width: 100%;
    min-height: 90vh;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
    align-items: center;
    gap: 1.5rem;
    background: rgb(161, 160, 160);
    border-radius: 5px;

}

.home-text p {
    margin-left: 6%;

    text-transform: uppercase;
}

.home-text h1 {
    font-size: 3.5rem;
    font-weight: 600;
    margin-bottom: 1rem;
    margin-left: 6%;
}


.home-text h1:hover {
    animation: effect linear 1s;
}

@keyframes effect {
    0% {
        transform: scale(1, 1);
    }

    25% {
        transform: scale(1.2, 0.5);
    }

    50% {
        transform: scale(1.1, 0.8);
    }

    100% {
        transform: scale(1, 1);
    }
}


.home-text p:hover {
    animation: effect linear 1s;
}

@keyframes effect {
    0% {
        transform: scale(1, 1);
    }

    25% {
        transform: scale(1.2, 0.5);
    }

    50% {
        transform: scale(1.1, 0.8);
    }

    100% {
        transform: scale(1, 1);
    }
}


.home-img:hover {
    animation: rotate 1s linear;
}

@keyframes rotate {
    0% {
        transform: rotate(0deg);
    }

    50% {
        transform: rotate(180deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

/* section shop */

.shop-text h2 {
    font-size: 2rem;
    font-weight: 60;
    text-align: center;
}

.product-img{
    max-width: 70%;
}

.shop-wrapper p{
    text-align: center;
}

.shop-wrapper .row .col-sm-4{
    text-align: center;
}

.shop-wrapper .btn-cart{
    margin: unset;
    margin-bottom: 5%;
}

